<resources>
    <string name="app_name">ClickCart</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="name_hint">Name</string>
    <string name="need_account">Need an account? Register here</string>
    <string name="waiting_approval">Your account is pending approval. Please wait for some time.</string>
    <string name="welcome">Welcome back to ClickCart</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="welcome_text_2">Please enter the data to log in.</string>
    <string name="register_text">Register Account</string>
    <string name="register_text_2">Enter Email/password to register.</string>
    <string name="have_account">Already have an account?</string>

    <!--    account status-->
    <string name="account_status_title">Account is creating</string>
    <string name="account_status_title2">Your Account is in pending status. wait until CSR approve the account</string>
    <string name="search_product_name">Search Product Name</string>

    <!--    home page-->
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productImg">product img</string>
    <string name="product_title">Product Title</string>
    <string name="productPrice">0$</string>
    <string name="min">-</string>
    <string name="Zero">0</string>
    <string name="plus">+</string>
    <string name="Image">Image</string>
    <string name="order_id">Order ID -</string>
    <string name="order_id_">Order ID -</string>
    <string name="sample_order_id">#857845690</string>
    <string name="sample_price">250$</string>
    <string name="sample_status">Completed</string>
    <string name="status">Status</string>
    <string name="order_on">Order on -</string>
    <string name="sample_date">2023/04/06</string>
    <string name="items">Items -</string>
    <string name="sample_number">7</string>
    <string name="total_price">Total price</string>
    <string name="report_issue">Report Issue</string>
    <string name="order_details">Order Details</string>
    <string name="order_created">Order Created</string>
    <string name="order_time">Order Time</string>
    <string name="sample_time">07:08 pm</string>
    <string name="order_status">Order Status</string>
    <string name="partially_completed">Partially Completed</string>
    <string name="item">Items</string>
    <string name="product_name">Product Name</string>
    <string name="vendor_name">vendor name</string>
    <string name="qty_1">Qty - 1</string>
    <string name="status_completed">Completed</string>
    <string name="reorder">Reorder</string>
    <string name="my_orders">My Orders</string>
    <string name="currently_no_orders_available">Currently no Orders available.</string>
    <string name="looks_like_you_haven_t_added_any_items_to_your_cart_yet">Looks like you haven\'t added any items to your cart yet.</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="cart_empty_error_msg_para">Looks like you haven\'t added any items to your cart yet.</string>
    <string name="total">Total</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="checkout">Checkout</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_account">My Account</string>
    <string name="sample_user_name">Name</string>
    <string name="sample_email">email address</string>
    <string name="manage_account">Manage Account</string>
    <string name="edit_profile_change_password_and_more">Edit profile, change password, and more</string>
    <string name="settings_amp_support"><![CDATA[Settings & Support]]></string>
    <string name="app_settings_about_us_and_contact_support">App settings, about us, and contact support</string>
    <string name="price_format">$%.2f</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_gmail_com">Youremail@gmail.com</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="featured_products">Featured Products</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_your_name_and_email">Change your name and email</string>
    <string name="save">Save</string>
    <string name="detail_product">Detail Product</string>
    <string name="official_store">Official Store</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cancel">Cancel</string>
    <string name="deactivate">Deactivate</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="no_products_available">No products available</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="desc_deactivate">This will deactivate your account and cannot be reactivated. It can only be reactivated by a customer service representative (CSR).</string>
    <string name="you_can_edit_your_reviews_here">You can edit your reviews here</string>
    <string name="my_reviews">My Reviews</string>
    <string name="vendor">Vendor</string>
    <string name="followers">followers</string>
    <string name="products">Products</string>
    <string name="sample_num_2">5</string>
    <string name="joined">Joined</string>
    <string name="reviews_for_seller">Reviews for seller</string>
    <string name="no_reviews_yet">No Reviews Yet</string>
    <string name="no_review_txt">This seller hasn\'t received any reviews yet</string>
    <string name="amalgam">amalgam</string>
</resources>