<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="225dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/Image"
            android:scaleType="centerCrop"
            android:src="@drawable/product_img_2" />

        <TextView
            android:id="@+id/cartProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="8dp"
            android:text="@string/product_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewForVendorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vendor_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/productPrice"
                android:textColor="@color/red_1"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/sample_number"
                android:paddingHorizontal="5dp"
                android:gravity="end"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="25dp"
                android:layout_height="25dp"

                android:contentDescription="@string/Image"
                app:srcCompat="@android:drawable/btn_star_big_on" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
