<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/shoes1"
            android:contentDescription="@string/Image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/product_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/productStatus"
            app:layout_constraintStart_toEndOf="@id/productImage"
            app:layout_constraintTop_toTopOf="@id/productImage" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/sample_price"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/productImage"
            app:layout_constraintTop_toBottomOf="@id/productName" />

        <TextView
            android:id="@+id/vendorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/vendor_name"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/productImage"
            app:layout_constraintTop_toBottomOf="@id/productPrice" />

        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/qty_1"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/vendorName"
            app:layout_constraintTop_toBottomOf="@id/productPrice" />

        <TextView
            android:id="@+id/productStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_completed"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>