<!-- res/layout/dialog_edit_profile.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/desc_deactivate"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_outline"
            android:text="@string/cancel"
            android:layout_marginTop="5dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/deactivateBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red_1"
            android:text="@string/deactivate"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_filled"
            android:textColor="@android:color/white"
            android:layout_marginStart="10dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>
